# Ashta-Nano

./: .gitignore  README.md  charte_ashta_ts.md  contexte.md
crates/ashta-bench/: Cargo.toml
crates/ashta-bench/benches/: common.rs  query.rs  read.rs  write.rs
crates/ashta-core/: Cargo.toml
crates/ashta-core/src/: event.rs  lib.rs  symbol.rs
crates/ashta-db/: Cargo.toml
crates/ashta-db/src/: lib.rs
crates/ashta-index/: Cargo.toml
crates/ashta-index/src/: entry.rs  index.rs  lib.rs
crates/ashta-ingest/: Cargo.toml
crates/ashta-ingest/src/: binance.rs  lib.rs
crates/ashta-kernel/: Cargo.toml
crates/ashta-kernel/src/: cpu.rs  diagnostics.rs  hugepages.rs  lib.rs  sched.rs
crates/ashta-log/: Cargo.toml
crates/ashta-log/src/: lib.rs  log_writer.rs  segment.rs
crates/ashta-mem/: Cargo.toml
crates/ashta-mem/src/: lib.rs  mmap.rs
crates/ashta-observe/: Cargo.toml
crates/ashta-observe/src/: lib.rs  metrics.rs
crates/ashta-query/: Cargo.toml
crates/ashta-query/src/: engine.rs  lib.rs
crates/ashta-replay/: Cargo.toml
crates/ashta-replay/src/: lib.rs  replay.rs
docs/: architecture.md  memory_architecture.md
docs/benchmarks/: baseline_vm_2026-05-02.txt
tools/ashta-demo/: Cargo.toml
tools/ashta-demo/src/: main.rs
tools/ashta-ws/: Cargo.toml
tools/ashta-ws/src/: main.rs
tools/hft-check/: Cargo.toml
tools/hft-check/src/: main.rs
