[package]
name = "ashta-bench"
version = "0.1.0"
edition = "2024"

[dev-dependencies]
criterion     = { version = "0.5", features = ["html_reports"] }
ashta-core    = { path = "../ashta-core" }
ashta-log     = { path = "../ashta-log" }
ashta-query   = { path = "../ashta-query" }
ashta-observe = { path = "../ashta-observe" }

[[bench]]
name = "write"
harness = false

[[bench]]
name = "read"
harness = false

[[bench]]
name = "query"
harness = false
